<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="153dp">

        <TableRow
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insertasNombre"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvSexo"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:text="@string/sexo" />

            <RadioGroup
                android:id="@+id/rgSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbHombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hombre" />

                <RadioButton
                    android:id="@+id/rbMujer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mujer" />
            </RadioGroup>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickBoton"
        android:text="@string/btañadir" />

    <ListView
        android:id="@+id/lvUsuarios"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>